--- a/yo/app/index.html
+++ b/yo/app/index.html
@@ -8,10 +8,8 @@
 <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 <!-- build:css(.) styles/vendor.css -->
 <!-- bower:css -->
-<link rel="stylesheet"
-	href="bower_components/bootstrap-css-only/css/bootstrap.css" />
-<link rel="stylesheet"
-	href="bower_components/components-font-awesome/css/font-awesome.css" />
+<link rel="stylesheet" href="bower_components/bootstrap-css-only/css/bootstrap.css" />
+<link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:css(.tmp) styles/main.css -->
@@ -69,12 +67,12 @@
 	<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 	<script src="bower_components/angular-touch/angular-touch.js"></script>
 	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-	<script
-		src="bower_components/bootstrap-ui-datetime-picker/dist/datetime-picker.min.js"></script>
+	<script src="bower_components/bootstrap-ui-datetime-picker/dist/datetime-picker.min.js"></script>
 	<!-- endbower -->
 	<!-- endbuild -->
 
 	<!-- build:js({.tmp,app}) scripts/scripts.js -->
+	<script src="scripts/md5.js"></script>
 	<script src="scripts/app.js"></script>
 	<script src="scripts/app.constants.js"></script>
 	<script src="scripts/controllers/main.js"></script>
