--- a/yo/app/index.html
+++ b/yo/app/index.html
@@ -27,7 +27,7 @@
 			<div class="container">
 				<div class="navbar-header">
 
-					<a class="navbar-brand" href="#/">Openflights</a>
+					<a class="navbar-brand" href="#/"><i class="fa fa-plane"></i> Openflights</a>
 				</div>
 
 				<div class="collapse">
@@ -49,7 +49,7 @@
 	<div class="footer">
 		<div class="container">
 			<p>
-				<span class="glyphicon glyphicon-heart"></span> from the Yeoman team
+				<span class="glyphicon glyphicon-heart"></span> from Thorsten.
 			</p>
 		</div>
 	</div>
