Working sign-in. We can now save flights. Flight-Listing is started.

--- a/yo/app/index.html
+++ b/yo/app/index.html
@@ -78,6 +78,7 @@
 	<script src="scripts/controllers/main.js"></script>
 	<script src="scripts/controllers/about.js"></script>
 	<script src="scripts/controllers/addflight.js"></script>
+<script src="scripts/controllers/flightlist.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
