--- a/yo/app/index.html
+++ b/yo/app/index.html
@@ -26,16 +26,21 @@
 		<div class="navbar navbar-default" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
-
+    <!-- note the ng-init and ng-click here: -->
+        <button type="button" class="navbar-toggle" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
 					<a class="navbar-brand" href="#/"><i class="fa fa-plane"></i> Openflights</a>
 				</div>
 
-				<div class="collapse">
-
-					<ul class="nav navbar-nav">
+				<div class="collapse navbar-collapse" uib-collapse="navCollapsed">
+        <ul class="nav navbar-nav">
 						<li class="active"><a href="#/">Home</a></li>
-						<li><a ng-href="#/about">About</a></li>
-						<li><a ng-href="#/">Contact</a></li>
+						<li><a ng-href="#/addFlight">Add Flight</a></li>
+						<li><a ng-href="#/flightlist">List Flights</a></li>
 					</ul>
 				</div>
 			</div>
@@ -72,13 +77,12 @@
 	<!-- endbuild -->
 
 	<!-- build:js({.tmp,app}) scripts/scripts.js -->
-	<script src="scripts/md5.js"></script>
 	<script src="scripts/app.js"></script>
 	<script src="scripts/app.constants.js"></script>
 	<script src="scripts/controllers/main.js"></script>
 	<script src="scripts/controllers/about.js"></script>
 	<script src="scripts/controllers/addflight.js"></script>
-<script src="scripts/controllers/flightlist.js"></script>
+	<script src="scripts/controllers/flightlist.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
